--- a/package.json
+++ b/package.json
@@ -13,13 +13,25 @@
   "author": "Nikhil Mashettiwar",
   "license": "ISC",
   "dependencies": {
+    "@angular/common": "^6.0.7",
+    "@angular/compiler": "^6.0.7",
+    "@angular/core": "^6.0.7",
+    "@angular/platform-browser": "^6.0.7",
+    "@angular/platform-browser-dynamic": "^6.0.7",
     "amorphic": "^2.4.10",
     "chalk": "^2.4.1",
-    "typescript": "^2.8.1"
+    "rxjs": "^6.2.1",
+    "typescript": "^2.8.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "^6.0.7",
     "awesome-typescript-loader": "^5.2.0",
+    "connect-history-api-fallback": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.18.0",
+    "koa-connect": "^2.0.1",
+    "script-ext-html-webpack-plugin": "^2.0.1",
     "shelljs": "^0.8.2",
     "ts-node": "^7.0.0",
     "webpack": "^4.15.1",
