--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "clean": "rm -Rf ./dist-server && rm -Rf ./dist",
     "serve": "webpack-serve",
     "compile": "tsc && ts-node copyStaticAssets.ts",
     "start": "node app.js",
@@ -16,21 +17,27 @@
     "@angular/common": "^6.0.7",
     "@angular/compiler": "^6.0.7",
     "@angular/core": "^6.0.7",
+    "@angular/material": "^6.3.3",
     "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.7",
+    "@types/node": "^10.5.2",
     "amorphic": "^2.4.10",
     "chalk": "^2.4.1",
     "rxjs": "^6.2.1",
-    "typescript": "^2.8.1",
+    "typescript": "2.7.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.7",
+    "@ngtools/webpack": "^6.0.8",
     "awesome-typescript-loader": "^5.2.0",
     "connect-history-api-fallback": "^1.5.0",
+    "copy-webpack-plugin": "^4.5.2",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
     "koa-connect": "^2.0.1",
+    "raw-loader": "^0.5.1",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "shelljs": "^0.8.2",
     "ts-node": "^7.0.0",
