html files load

--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "author": "Nikhil Mashettiwar",
   "license": "ISC",
   "dependencies": {
+    "@angular/animations": "^6.0.9",
+    "@angular/cdk": "^6.3.3",
     "@angular/common": "^6.0.7",
     "@angular/compiler": "^6.0.7",
     "@angular/core": "^6.0.7",
+    "@angular/forms": "^6.0.9",
     "@angular/material": "^6.3.3",
     "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.7",
@@ -40,6 +43,7 @@
     "raw-loader": "^0.5.1",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "shelljs": "^0.8.2",
+    "ts-loader": "^4.4.2",
     "ts-node": "^7.0.0",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
